--- a/src/main/resources/templates/articles/show_all.html
+++ b/src/main/resources/templates/articles/show_all.html
@@ -11,6 +11,15 @@
 <!-- 우리가 작업할 공간 -->
 <body>
 <div layout:fragment="content" class="content">
+
+    <div th:unless="${msg == null}">
+        <div class="alert alert-warning alert-dismissible fade show" role="alert">
+            <strong th:text="${msg}">Holy guacamole!</strong>
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+    </div>
+
+
     <table class="table">
         <thead>
         <tr>
@@ -21,12 +30,12 @@
         </thead>
         <tbody>
         <div>
-            <tr>
-                <th scope="row">1</th>
+            <tr th:each="article : ${articleList}">
+                <th scope="row" th:text="${article.id}">1</th>
                 <td>
-                    <a href="">제목111 </a>
+                    <a th:href="@{/articles/{id}(id=${article.id})}">[[${article.title}]]</a>
                 </td>
-                <td>내용 1111</td>
+                <td th:text="${article.content}">내용 1111</td>
             </tr>
         </div>
         </tbody>
