--- a/src/main/resources/templates/articles/show.html
+++ b/src/main/resources/templates/articles/show.html
@@ -21,35 +21,24 @@
         </thead>
         <tbody>
         <tr>
-            <th scope="row" th:text="${dto.id}">1</th>
+            <th scope="row" th:text="${dto.article_id}">1</th>
             <td th:text="${dto.title}">제목111</td>
             <td th:text="${dto.content}">내용 1111</td>
         </tr>
         </tbody>
     </table>
-    <a th:href="@{/articles/{id}/update(id=${dto.id})}" class="btn btn-primary">Edit</a>
-    <a th:href="@{/articles/{id}/delete(id=${dto.id})}" class="btn btn-danger">Delete</a>
+    <a th:href="@{/articles/{id}/update(id=${dto.article_id})}" class="btn btn-primary">Edit</a>
+    <a th:href="@{/articles/{id}/delete(id=${dto.article_id})}" class="btn btn-danger">Delete</a>
     <a href="/articles">Go to Article List</a>
     <br><br>
-    <div class="card m-2">
-        <div class="card-header">
-            <span>Featured</span>
+    <div class="card m-2" th:each="comment : ${dto.commentList}" th:object="${comment}">
+        <div class="card-header" >
+            <span th:text="*{nickname}">Featured</span>
             <a class="btn btn-sm btn-outline-primary">수정</a>
             <a class="btn btn-sm btn-outline-primary" id="comment-delete-btn">삭제</a>
         </div>
         <div class="card-body">
-            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-        </div>
-    </div>
-
-    <div class="card m-2">
-        <div class="card-header">
-            <span>Featured</span>
-            <a class="btn btn-sm btn-outline-primary">수정</a>
-            <a class="btn btn-sm btn-outline-primary" id="comment-delete-btn">삭제</a>
-        </div>
-        <div class="card-body">
-            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+            <p class="card-text" th:text="*{body}">With supporting text below as a natural lead-in to additional content.</p>
         </div>
     </div>
 
@@ -57,7 +46,7 @@
         <!-- 닉네임 입력-->
         <div class="m-2">
             <label class="form-label">닉네임</label>
-            <input type="text" class="form-control" id="new-comment-nickname">
+            <input type="text" class="form-control" id="new-comment-nickname" >
         </div>
         <!-- 댓글 본문 입력-->
         <div class="m-2">
