--- a/src/main/resources/templates/articles/show_all.html
+++ b/src/main/resources/templates/articles/show_all.html
@@ -31,9 +31,9 @@
         <tbody>
         <div>
             <tr th:each="article : ${articleList}">
-                <th scope="row" th:text="${article.id}">1</th>
+                <th scope="row" th:text="${article.article_id}">1</th>
                 <td>
-                    <a th:href="@{/articles/{id}(id=${article.id})}">[[${article.title}]]</a>
+                    <a th:href="@{/articles/{id}(id=${article.article_id})}">[[${article.title}]]</a>
                 </td>
                 <td th:text="${article.content}">내용 1111</td>
             </tr>
