--- a/src/main/resources/templates/articles/show.html
+++ b/src/main/resources/templates/articles/show.html
@@ -21,14 +21,14 @@
         </thead>
         <tbody>
         <tr>
-            <th scope="row" th:text="${dto.article_id}">1</th>
+            <th scope="row" th:text="${dto.id}">1</th>
             <td th:text="${dto.title}">제목111</td>
             <td th:text="${dto.content}">내용 1111</td>
         </tr>
         </tbody>
     </table>
-    <a th:href="@{/articles/{id}/update(id=${dto.article_id})}" class="btn btn-primary">Edit</a>
-    <a th:href="@{/articles/{id}/delete(id=${dto.article_id})}" class="btn btn-danger">Delete</a>
+    <a th:href="@{/articles/{id}/update(id=${dto.id})}" class="btn btn-primary">Edit</a>
+    <a th:href="@{/articles/{id}/delete(id=${dto.id})}" class="btn btn-danger">Delete</a>
     <a href="/articles">Go to Article List</a>
     <br><br>
     <div class="card m-2" th:each="comment : ${dto.commentList}" th:object="${comment}">
@@ -43,7 +43,7 @@
         </div>
     </div>
 
-    <form th:action="@{/articles/{id}/comments(id=${dto.article_id})}" method="post">
+    <form th:action="@{/articles/{id}/comments(id=${dto.id})}" method="post">
         <!-- 닉네임 입력-->
         <div class="m-2">
             <label class="form-label">닉네임</label>
