--- a/src/main/resources/templates/articles/show_all.html
+++ b/src/main/resources/templates/articles/show_all.html
@@ -31,9 +31,9 @@
         <tbody>
         <div>
             <tr th:each="article : ${articleList}">
-                <th scope="row" th:text="${article.article_id}">1</th>
+                <th scope="row" th:text="${article.id}">1</th>
                 <td>
-                    <a th:href="@{/articles/{id}(id=${article.article_id})}">[[${article.title}]]</a>
+                    <a th:href="@{/articles/{id}(id=${article.id})}">[[${article.title}]]</a>
                 </td>
                 <td th:text="${article.content}">내용 1111</td>
             </tr>
@@ -41,6 +41,26 @@
         </tbody>
     </table>
     <a href="/articles/new">New Article</a>
+
+    <nav aria-label="...">
+        <ul class="pagination">
+            <li class="page-item"  th:classappend="${articleList.number}<=0 ? 'disabled' ">
+                <a class="page-link" th:href="@{/articles(page=${articleList.number - 1})}">Previous</a>
+            </li>
+
+            <th:block th:each="pageNumber : ${pageBars}">
+                <li class="page-item"><a class="page-link" th:href="@{/articles(page=${pageNumber})}" th:text="${pageNumber + 1}">1</a></li>
+<!--                <li class="page-item active" aria-current="page">
+                    <a class="page-link" href="#">2</a>
+                </li>
+                <li class="page-item"><a class="page-link" href="#">3</a></li> -->
+            </th:block>
+
+            <li class="page-item" th:classappend="${articleList.number + 1} == ${articleList.totalPages} ? 'disabled'">
+                <a class="page-link" th:href="@{/articles(page=${articleList.number + 1})}">Next</a>
+            </li>
+        </ul>
+    </nav>
 </div>
 </body>
 </html>
